SAK-50950 Assignments support sub page navigation
https://sakaiproject.atlassian.net/browse/SAK-50950